# L0

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keyboard.rs  lib.rs  main.rs  session_manager.rs  storage.rs
