[package]
name = "l0"
version = "0.1.0"
description = "Modern Text Logger"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "l0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rdev = "0.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
parking_lot = "0.12.3"
tauri-plugin-autostart = "2.1.0"
tauri-plugin-clipboard-manager = "2.1.0"
tauri-plugin-shell = "2.1.0"
tauri-plugin-global-shortcut = "2.1.0"

